fix: profile image cut on mobile devices

--- a/src/components/CoverPage/CoverPage.module.scss
+++ b/src/components/CoverPage/CoverPage.module.scss
@@ -87,7 +87,7 @@
           
             & .profileImageCover{        
                 position: relative;        
-                top: 1rem;
+                top: 3rem;
                 left: 0;
                 transform: none;
                 & .profileImage{
